# ----------------------------------------------------------------------------
# Libraries
# ----------------------------------------------------------------------------

add_subdirectory (mf_lib)

# ----------------------------------------------------------------------------
# Executables
# ----------------------------------------------------------------------------

add_subdirectory (mf_exe)